# buried-marks-voting-microservice

./: .gitignore  Dockerfile  README.md  entrypoint.sh  envexample  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ae78688149ac_init_db.py  ceb7689262f5_change_voter_id_to_integer.py
app/: backend_pre_start.py  main.py  scheduler.py
app/core/: auth.py  logger.py  main_router.py
app/core/db/: mock_session.py  session.py
app/polls/: models.py  schema.py  service.py  views.py
app/tests/: test_polls.py
docker/: Dockerfile
